_manifest/book-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service-deployment
  namespace: spring-app
spec:
  selector:
    matchLabels:
      app: book-service
  replicas: 2
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: book-service:1.0.1
          imagePullPolicy: Never
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
