_manifest/book-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-service-service
  namespace: spring-app
spec:
  selector:
    app: book-service
  ports:
    - protocol: TCP
      port: 8080
  type: ClusterIP
